2006-01-18 Konstantin Triger <kostat@mainsoft.com>

	* HtmlTextWriterTest.cs: Added tests enduring case insensitivity of
	  attributes and correctness of HtmlTextWriterAttribute

2005-12-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ControlTest.cs: new tests to prove that Control uses its own
	ControlCollection field instead of the Controls property when rendering.

2005-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ControlCollectionTest.cs: new tests.

2005-09-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ControlTest.cs: a few more tests for UniqueID, as the datagrid and
	related tests showed a problem with this.

2005-09-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AttributeCollectionTest.cs: some tests for this.

2005-09-23  Ben Maurer  <bmaurer@ximian.com>

	* HtmlTextWriterTest.cs: Reenable some stuff

2005-09-21  Sebastien Pouliot  <sebastien@ximian.com>

	* DataBindingHandlerAttributeTest.cs: Fixed test results in 2.0 RC 
	(string interning rules differ in 2.0 so it's better to use Assert.
	AreEquals than Assert.AreSame).
	* PageTest.cs: Fixed test results in 2.0 RC (NRE in Page.User).
	* TestUrlPropertyAttribute.cs: Fixed test results in 2.0 RC (removed
	property changed results).

2005-09-20  Sebastien Pouliot  <sebastien@ximian.com>

	* TestUrlPropertyAttribute.cs: Remove references to UrlTypes (removed 
	in 2.0 RC). Fix compilation for tests under NET_2_0.

2005-09-19  Sebastien Pouliot  <sebastien@ximian.com>

	* TagPrefixAttributeCas.cs: New. CAS unit tests.
	* TemplateBuilderCas.cs: New. CAS unit tests.
	* TemplateContainerAttributeCas.cs: New. CAS unit tests.
	* TemplateControlCas.cs: New. CAS unit tests.
	* ToolboxDataAttributeCas.cs: New. CAS unit tests.
	* TripletCas.cs: New. CAS unit tests.
	* UserControlCas.cs: New. CAS unit tests.
	* UserControlControlBuilderCas.cs: New. CAS unit tests.
	* ValidationPropertyAttributeCas.cs: New. CAS unit tests.
	* ValidatorCollectionCas.cs: New. CAS unit tests.
